--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)
 PROJECT(test-ocl)
 
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
 ADD_SUBDIRECTORY(src)
