--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
-set(ICD_SRC
-    cl.c
-    cl_icd.c
-    cl_ext.c)
+# SPDX-License-Identifier: Apache-2.0
 
-add_library(testcl SHARED ${ICD_SRC})
+target_sources(${PRJ_LIB_NAME} PRIVATE
+  cl.c
+  cl_icd.c
+  cl_ext.c
+  )
