cl: split platform/device/context to each file

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
 # SPDX-License-Identifier: Apache-2.0
 
 target_sources(${PRJ_LIB_NAME} PRIVATE
-  cl.c
   cl_icd.c
-  cl_ext.c
+  cl_platform.c
+  cl_device.c
+  cl_context.c
   )
