--- a/drivers/gdb/CMakeLists.txt
+++ b/drivers/gdb/CMakeLists.txt
@@ -1,8 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
 
 prj_sources(
-  cl_icd.c
-  cl_platform.c
-  cl_device.c
-  cl_context.c
+  gdb_remote.c
   )
