drivers: gdb_remote: separate common features

--- a/drivers/gdb/CMakeLists.txt
+++ b/drivers/gdb/CMakeLists.txt
@@ -3,3 +3,5 @@
 prj_sources(
   gdb_remote.c
   )
+prj_sources_ifdef(CONFIG_GDB_OPENOCD gdb_remote_openocd.c)
+prj_sources_ifdef(CONFIG_GDB_QEMU gdb_remote_qemu.c)
