test: add sgemm

--- a/test/Makefile
+++ b/test/Makefile
@@ -8,15 +8,22 @@ CFLAGS   = $(CMNFLAGS)
 LDFLAGS  = $(CMNFLAGS)
 LDADD    = -lOpenCL -lm
 
-BINS = vecadd vecaddf
+BINS = sgemm \
+	vecadd vecaddf
+SGEMM_OBJS = sgemm.o
 VECADD_OBJS = vecadd.o
 VECADDF_OBJS = vecaddf.o
-OBJS = $(VECADD_OBJS) $(VECADDF_OBJS)
+OBJS = $(VECADD_OBJS) $(VECADDF_OBJS) \
+	$(SGEMM_OBJS)
 
 all: $(BINS)
 
+sgemm: $(SGEMM_OBJS)
+	$(CC) $(LDFLAGS) $^ $(LDADD) -o $@
+
 vecadd: $(VECADD_OBJS)
 	$(CC) $(LDFLAGS) $^ $(LDADD) -o $@
+
 vecaddf: $(VECADDF_OBJS)
 	$(CC) $(LDFLAGS) $^ $(LDADD) -o $@
 
